--- a/index.html
+++ b/index.html
@@ -19,10 +19,18 @@
       >
         <p>01</p>
       </div>
-      <div class="test2" onclick="location.href='#'" style="cursor: grabbing">
+      <div
+        class="test2"
+        onclick="location.href='test2.html'"
+        style="cursor: grabbing"
+      >
         <p>02</p>
       </div>
-      <div class="test3" onclick="location.href='#'" style="cursor: grabbing">
+      <div
+        class="test3"
+        onclick="location.href='test3.html'"
+        style="cursor: grabbing"
+      >
         <p>03</p>
       </div>
     </article>
