--- a/test2-1.html
+++ b/test2-1.html
@@ -4,21 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="test1style.css" />
-    <title>TEST 1</title>
+    <link rel="stylesheet" href="test2style.css" />
+    <title>TEST 2</title>
   </head>
   <body style="overflow: hidden">
     <div class="xbox">
       <div class="ybox">
         <h1>
-          이것을 선택한 당신은 <br />
+          대답으로 당신의 콤플렉스를 알 수 있습니다. <br />
+          <br />
           <div style="font-size: 50px; color: red">
-            자극적인 사건을 원하고 있습니다. <br />
+            대인관계 <br />
+            <br />
           </div>
-          <div style="font-size: 20px"><br /></div>
-          아무 일도 없는데 텐션이 높아졌을 때 <br />
-          스릴을 맛보고 싶어서 <br />
-          위험한 행동을 원하기도 합니다.
         </h1>
         <button onclick="window.location.href='index.html'">HOME</button>
       </div>
