--- a/test3-1.html
+++ b/test3-1.html
@@ -4,22 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="test1style.css" />
-    <title>TEST 1</title>
+    <link rel="stylesheet" href="test3style.css" />
+    <title>TEST 3</title>
   </head>
   <body style="overflow: hidden">
     <div class="xbox">
       <div class="ybox">
         <h1>
-          이것을 선택한 당신은 <br />
-          <div style="font-size: 50px; color: red">
-            자극적인 사건을 원하고 있습니다. <br />
-          </div>
+          당신은 싫어하는 사람을 대할 때 <br />
+          <div style="font-size: 60px; color: red">앞뒤가 다른 타입 <br /></div>
           <div style="font-size: 20px"><br /></div>
-          아무 일도 없는데 텐션이 높아졌을 때 <br />
-          스릴을 맛보고 싶어서 <br />
-          위험한 행동을 원하기도 합니다.
+          겉으로는 친하게 보이지만 뒤에서 몰래 험담을 하기도 합니다. <br />
+          나는 착하지만, 너는 나쁘다 라는 생각을 하고 있을 수도 있습니다.
         </h1>
+
         <button onclick="window.location.href='index.html'">HOME</button>
       </div>
     </div>
